backend/mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb-microser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-microser
  template:
    metadata:
      labels:
        app: mongodb-microser
    spec:
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongodb-pv-claim
      containers:
        - name: mongodb-microser
          image: mongo
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb-microser
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
