backend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations: 
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: api.govueadmin.local
      http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: users-microser-service
                port: 
                  number: 30000
